--- a/geordle.css
+++ b/geordle.css
@@ -211,8 +211,14 @@ hr {
   }    
 }
 
-@media screen and (max-width: 399px) and (min-width: 320px) {
+@media screen and (max-width: 399px) and (min-width: 350px) {
   .keyboard-row {
     width: 320px;
-  }  
+  }
+  .key-tile {
+    width: 28px;
+  } 
+  .enter-key-tile {
+    width: 58px;
+  }    
 }
