--- a/geordle.css
+++ b/geordle.css
@@ -202,9 +202,16 @@ hr {
 @media screen and (min-width: 400px) {
   .keyboard-row {
     width: 100%;
+  }
+  .key-tile {
+    width: 100%;
+  } 
+  .enter-key-tile {
+    width: 100%;
+  }    
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (max-width: 399px) and (min-width: 350px) {
   .keyboard-row {
     width: 90%;
   }
