--- a/geordle.css
+++ b/geordle.css
@@ -59,7 +59,7 @@ a { text-decoration: none; }
 .buttonrad {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 12px;
     color: black;
     border-style: solid;
     background-color: #fff;
@@ -70,12 +70,13 @@ a { text-decoration: none; }
 .buttoncoffee {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 10px;
+    font-size: 11px;
     color: black;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
-
+	margin-bottom:10px;
+	margin-top:10px;
 }
 
 #board {
@@ -91,7 +92,7 @@ a { text-decoration: none; }
   width: 330px;
   height: 0px;
   margin: 0 auto;
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 1px;
   display: flex;
   flex-wrap: wrap;
@@ -363,6 +364,15 @@ a { text-decoration: none; }
 	pointer-events: all;
 }
 
+#wins, #time{
+	color: #e6e6e6;
+	font-weight: bold;
+}
+
+#mode{
+	color: #ff9900;
+	font-weight: bold;
+}
 
 @media screen and (min-width: 400px) {
   .keyboard-row {
