--- a/geordle.css
+++ b/geordle.css
@@ -56,6 +56,29 @@ a { text-decoration: none; }
   }
 }
 
+.waviy1 {
+  position: relative;
+}
+
+.waviy1 span {
+  font-family: 'Alfa Slab One', cursive;
+  position: relative;
+  display: inline-block;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  animation: flipmain 2s;
+  animation-delay: calc(.075s * var(--i))
+}
+
+@keyframes flipmain {
+
+  0%,
+  80% {
+    transform: rotateY(360deg)
+  }
+}
+
 .buttonrad {
   border-radius: 12px;
     font-weight: bold;
@@ -65,6 +88,23 @@ a { text-decoration: none; }
     background-color: #fff;
     border-color: #fff;
 	width:90px;
+}
+
+.buttonrad1 {
+  border-radius: 12px;
+    font-weight: bold;
+    font-size: 14px;
+    color: black;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #fff;
+	width:145px;
+}
+
+.button-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .buttoncoffee {
@@ -79,13 +119,49 @@ a { text-decoration: none; }
 	margin-top:10px;
 }
 
+#footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+#pzlhdr, #pzl {
+  font-weight: bold;
+  font-size: 11px;
+  margin-right: 7px;
+} 
+
+#bbhdr {
+  font-weight: bold;
+  font-size: 11px;
+  margin-left: 20px;
+} 
+
+#bb{
+  font-weight: bold;
+  font-size: 14px;
+  margin-left: 20px;
+} 
+
 #board {
     width: 350;
-    height: 300px;
     margin: 0 auto;
     margin-top: 3px;
-    display: flex;
-    flex-wrap: wrap;	
+	
+}
+
+#boardfirst {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#boardlast {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #answer {
@@ -97,7 +173,7 @@ a { text-decoration: none; }
   display: flex;
   flex-wrap: wrap;
   color: red;
-  font-size: 11px;
+  font-size: 15px;
   /* font-family: Georgia, serif; */
   font-weight: bolder;
   justify-content: center;
@@ -121,6 +197,10 @@ a { text-decoration: none; }
   100% {
     transform: scaleY(1);
   }
+}
+
+.popanswer {
+  animation: pop 0.3s linear 1;
 }
 
 .animate-charcter {
@@ -210,6 +290,7 @@ a { text-decoration: none; }
 }
 
 #stats {
+	position: absolute;
   font-size: 11px;
   font-weight: bold;
   letter-spacing: 2px;
@@ -229,6 +310,11 @@ a { text-decoration: none; }
   justify-content: space-between;
   text-align: center;
   color:white;
+}
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.4;
 }
 
 .correct {
@@ -345,6 +431,61 @@ a { text-decoration: none; }
 	text-align: left;
 	color: white;
 	font-size: 12px;
+	text-align:justify;
+}
+
+.summary {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 5%;
+  z-index: 5;
+  background-color: black;
+  width: 400px;
+  max-width: 100%;
+}
+
+.summary.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.summary-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid white;
+
+}
+
+.summary-header .summary-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.summary-header .close-button {
+  font-size: 1.25rem;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.summary-body {
+  padding: 10px 15px;
+  text-align: left;
+  color: white;
+  font-size: 12px;
+}
+
+.summary-item {
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 #overlay {
@@ -364,6 +505,23 @@ a { text-decoration: none; }
 	pointer-events: all;
 }
 
+#overlay1 {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: GrayText;
+  opacity: 0;
+  pointer-events: none;
+  transition: 200ms ease-in-out;
+}
+
+#overlay1.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
 #wins, #time{
 	color: #e6e6e6;
 	font-weight: bold;
@@ -373,6 +531,27 @@ a { text-decoration: none; }
 	color: #ff9900;
 	font-weight: bold;
 }
+
+#lives{
+	height: 20px;
+	font-size: 20px;
+	letter-spacing: 10px;
+}
+
+  .blink {
+	animation: blink-animation 1s steps(5, start) 3;
+	-webkit-animation: blink-animation 1s steps(5, start) 3;
+  }
+  @keyframes blink-animation {
+	to {
+	  visibility: hidden;
+	}
+  }
+  @-webkit-keyframes blink-animation {
+	to {
+	  visibility: hidden;
+	}
+  }
 
 @media screen and (min-width: 400px) {
   .keyboard-row {
