--- a/practice/practice.css
+++ b/practice/practice.css
@@ -56,6 +56,29 @@ a { text-decoration: none; }
   }
 }
 
+.waviy1 {
+  position: relative;
+}
+
+.waviy1 span {
+  font-family: 'Alfa Slab One', cursive;
+  position: relative;
+  display: inline-block;
+  font-size: 12px;
+  color: #ff0000;
+  text-transform: uppercase;
+  animation: flipmain 2s;
+  animation-delay: calc(.075s * var(--i))
+}
+
+@keyframes flipmain {
+
+  0%,
+  80% {
+    transform: rotateY(360deg)
+  }
+}
+
 .buttonrad {
   border-radius: 12px;
     font-weight: bold;
@@ -64,7 +87,24 @@ a { text-decoration: none; }
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
-	width:75px;
+	width:90px;
+}
+
+.buttonrad1 {
+  border-radius: 12px;
+    font-weight: bold;
+    font-size: 14px;
+    color: black;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #fff;
+	width:145px;
+}
+
+.button-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .buttoncoffee {
@@ -79,13 +119,26 @@ a { text-decoration: none; }
 	margin-top:10px;
 }
 
+
 #board {
     width: 350;
-    height: 300px;
     margin: 0 auto;
     margin-top: 3px;
-    display: flex;
-    flex-wrap: wrap;	
+	
+}
+
+#boardfirst {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#boardlast {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #answer {
@@ -97,7 +150,7 @@ a { text-decoration: none; }
   display: flex;
   flex-wrap: wrap;
   color: red;
-  font-size: 11px;
+  font-size: 12px;
   /* font-family: Georgia, serif; */
   font-weight: bolder;
   justify-content: center;
@@ -121,6 +174,10 @@ a { text-decoration: none; }
   100% {
     transform: scaleY(1);
   }
+}
+
+.popanswer {
+  animation: pop 0.3s linear 1;
 }
 
 .animate-charcter {
@@ -229,6 +286,11 @@ a { text-decoration: none; }
   justify-content: space-between;
   text-align: center;
   color:white;
+}
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.4;
 }
 
 .correct {
@@ -345,8 +407,9 @@ a { text-decoration: none; }
 	text-align: left;
 	color: white;
 	font-size: 12px;
-	text-align:justify;	
+	text-align:justify;
 }
+
 
 #overlay {
     position:fixed;
@@ -370,10 +433,26 @@ a { text-decoration: none; }
 	font-weight: bold;
 }
 
-#mode{
-	color: #ff9900;
-	font-weight: bold;
+#lives{
+	height: 20px;
+	font-size: 20px;
+	letter-spacing: 10px;
 }
+
+  .blink {
+	animation: blink-animation 1s steps(5, start) 3;
+	-webkit-animation: blink-animation 1s steps(5, start) 3;
+  }
+  @keyframes blink-animation {
+	to {
+	  visibility: hidden;
+	}
+  }
+  @-webkit-keyframes blink-animation {
+	to {
+	  visibility: hidden;
+	}
+  }
 
 @media screen and (min-width: 400px) {
   .keyboard-row {
