--- a/classic/classic.css
+++ b/classic/classic.css
@@ -285,7 +285,7 @@ a { text-decoration: none; }
 }
 
 .keyboard-row {
-    width: 400px;
+    width: auto;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -398,7 +398,7 @@ a { text-decoration: none; }
 	font-weight: bold;
 }
 
-@media screen and (min-width: 400px) {
+/* @media screen and (min-width: 400px) {
   .keyboard-row {
     width: 400px;
   }
@@ -438,4 +438,4 @@ a { text-decoration: none; }
     width: 46px;
     height: 50px;
   }   
-}
+} */
