--- a/practice/practice.css
+++ b/practice/practice.css
@@ -93,12 +93,23 @@ a { text-decoration: none; }
 .buttonrad1 {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 12px;
     color: black;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
-	width:145px;
+	width:75px;
+}
+
+.buttonref {
+  border-radius: 12px;
+    font-weight: bold;
+    font-size: 12px;
+    color: green;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #fff;
+	width:40px;
 }
 
 .button-row {
