--- a/practice/practice.css
+++ b/practice/practice.css
@@ -104,8 +104,8 @@ a { text-decoration: none; }
 .buttonref {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 14px;
-    color: #6AAA64;
+    font-size: 12px;
+    color: black;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
