--- a/classic/classic.css
+++ b/classic/classic.css
@@ -254,6 +254,30 @@ a { text-decoration: none; }
   color:white;
 }
 
+
+#icons {
+	position: absolute;
+  font-size: 11px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  width: 375px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 2;
+  right: 2;
+  top: 5px;
+  text-align: center;
+}
+
+#icons-item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  text-align: center;
+  color:white;
+}
+
 .correct {
     background-color: #6AAA64;
     color: white;
