--- a/classic/classic.css
+++ b/classic/classic.css
@@ -440,7 +440,7 @@ a { text-decoration: none; }
     width: 350px;
   } */
   
-  #stats {
+  #icons {
     width: 350px;
   } 
  
@@ -459,7 +459,7 @@ a { text-decoration: none; }
 /*   .keyboard-row {
     width: 310px;
   } */
- #stats {
+ #icons {
     width: 310px;
   }
   
